kelvin: some mappinfg manenos

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -104,7 +104,7 @@
 } */
 
 .live-map-cont .verti-timeline {
-    border-left: 3px dashed #b0b2bed4;
+    /* border-left: 3px dashed #b0b2bed4; */
     margin: 0 10px;
 }
 
