--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1232,3 +1232,56 @@ padding: 0px;
     .flip-x {
         transform: scaleX(-1) !important;
     }
+
+    .quick-stats-cont{
+        background-color: #11998e;
+        background:linear-gradient(to right, rgb(17, 153, 142), rgb(0 98 32));
+        color: white;
+        position: relative;
+    }
+    .quick-stats-cont .quick-stat>div{
+        padding: 1rem;
+        background-color:#ffffff21;
+        color: white;
+        border-radius: 1%;
+        display: flex;
+    }
+
+    .quick-stat img{
+        height: 40px;
+    }
+
+    .quick-stats-cont .quick-stat>div>div:last-child{
+        padding-left: 1rem;
+    }
+
+    .quick-stats-cont .form-select{
+        background: #ffffff26;
+        border: none !important;
+        color: white !important;
+        text-align: right;
+    }
+
+    .quick-stats-cont .quick-stat>div .text-muted{
+        color: #ffffffdb !important;
+        font-size: 12px;
+    }
+    .quick-stats-cont .quick-stat>div h5{
+        color: white;
+    }
+
+    .quick-stats-cont::before{
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0px;
+        background-color: red;
+        background-image: url(../images/index-page-img.jpg);
+        background-position: bottom;
+        /* background-repeat: no-repeat; */
+        background-size: contain;
+        /* background-size: cover; */
+        opacity: 0.1;
+    }
