--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1349,3 +1349,8 @@ padding: 0px;
     .highcharts-credits{
         display: none;
     }
+
+    .custom-drop-shadow{
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    }
